SPI扩展：序列化工厂懒加载